Translate recommendations.yaml into Japanese

--- a/azure-specialized-workloads/hpc/recommendations.yaml
+++ b/azure-specialized-workloads/hpc/recommendations.yaml
@@ -1,12 +1,12 @@
-- description: Ensure File shares that stores jobs metadata are accessible from all head nodes
+- description: ジョブのメタデータを保存するファイル共有がすべてのヘッド ノードからアクセス可能であることを確認する
   aprlGuid: 4c78fab4-845a-495d-ab14-3ad51de53a2a
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    Currently in all HPC Pack ARM templates we create the cluster share on one of the head node which is not highly available.
+  longDescription: |-
+    現在、すべての HPC Pack ARM テンプレートでは、可用性が高くないヘッド ノードの 1 つにクラスター共有を作成します。
   potentialBenefits: Enhances job metadata availability
   pgVerified: false
   publishedToLearn: false
@@ -15,9 +15,8 @@
   tags: null
   learnMoreLink:
     - name: Learn More
-      url: "https://learn.microsoft.com/en-us/powershell/high-performance-computing/hpcpack-ha-cloud?view=hpc19-ps#hpc-pack-cluster-shares"
-
-- description: Automatically grow and shrink HPC Pack cluster resources
+      url: "https://learn.microsoft.com/ja-jp/powershell/high-performance-computing/hpcpack-ha-cloud?view=hpc19-ps#hpc-pack-cluster-shares"
+- description: HPC Pack クラスター リソースを自動的に拡大および縮小する
   aprlGuid: b02b5a0e-3770-44da-a099-5dd4d9f8cd70
   recommendationTypeId: null
   recommendationControl: Scalability
@@ -34,17 +33,16 @@
   tags: null
   learnMoreLink:
     - name: Learn More
-      url: "https://learn.microsoft.com/en-us/powershell/high-performance-computing/hpcpack-auto-grow-shrink?view=hpc19-ps"
-
-- description: Use multiple head nodes for HPC Pack
+      url: "https://learn.microsoft.com/ja-jp/powershell/high-performance-computing/hpcpack-auto-grow-shrink?view=hpc19-ps"
+- description: HPC Pack に複数のヘッド ノードを使用する
   aprlGuid: a48b1be6-77a3-4e3c-8205-dda2ba010a99
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: Medium
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    Establish a cluster with a minimum of two head nodes. In the event of a head node failure, the active HPC Service will be automatically transferred from the affected head node to another functioning one.
+  longDescription: |-
+    少なくとも 2 つのヘッド ノードを持つクラスターを確立します。ヘッド ノードに障害が発生した場合、アクティブな HPC サービスは、影響を受けたヘッド ノードから別の機能しているヘッド ノードに自動的に転送されます。
   potentialBenefits: Enhanced reliability for HPC
   pgVerified: false
   publishedToLearn: false
@@ -53,17 +51,16 @@
   tags: null
   learnMoreLink:
     - name: Learn More
-      url: "https://learn.microsoft.com/en-us/powershell/high-performance-computing/hpcpack-ha-cloud?view=hpc19-ps#dealing-with-head-node-failure"
-
-- description: Use HPC Pack Azure AD Integration or other highly available AD configuration
+      url: "https://learn.microsoft.com/ja-jp/powershell/high-performance-computing/hpcpack-ha-cloud?view=hpc19-ps#dealing-with-head-node-failure"
+- description: HPC Pack Azure AD Integration またはその他の高可用性 AD 構成を使用する
   aprlGuid: 37eec891-7880-4759-b597-7cd925512fe3
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    When HPC failed to connect to the Domain controller, admin and user will not be able to connect to the HPC Service thus not able to manage and submit jobs to the cluster.
+  longDescription: |-
+    HPC がドメイン コントローラーへの接続に失敗すると、管理者とユーザーは HPC サービスに接続できなくなり、クラスターへのジョブの管理や送信ができなくなります。
   potentialBenefits: Enhanced reliability and job management
   pgVerified: false
   publishedToLearn: false
@@ -72,4 +69,4 @@
   tags: null
   learnMoreLink:
     - name: Learn More
-      url: "https://learn.microsoft.com/en-us/powershell/high-performance-computing/hpcpack-ha-cloud?view=hpc19-ps#dealing-with-ad-failure"
+      url: "https://learn.microsoft.com/ja-jp/powershell/high-performance-computing/hpcpack-ha-cloud?view=hpc19-ps#dealing-with-ad-failure"
