--- a/azure-specialized-workloads/avs/recommendations.yaml
+++ b/azure-specialized-workloads/avs/recommendations.yaml
@@ -1,12 +1,12 @@
-- description: Use the AVS Interconnect feature to connect private clouds in different availability zones
+- description: AVS インターコネクト機能を使用して、異なるアベイラビリティ ゾーンのプライベート クラウドに接続します。
   aprlGuid: 726abfe3-adae-4a6d-8eb8-4b27a7214ca1
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    Use the Interconnect feature for direct communication between private clouds in different availability zones, enabling connectivity between the private clouds management and workload networks.
+  longDescription: |-
+    相互接続機能を使用すると、異なるアベイラビリティ ゾーンにあるプライベート クラウド間の直接通信が可能になり、プライベート クラウド管理とワークロード ネットワーク間の接続が可能になります。
   potentialBenefits: Enhanced private cloud connectivity
   pgVerified: true
   publishedToLearn: false
@@ -15,17 +15,16 @@
   tags: null
   learnMoreLink:
     - name: Connect Private Clouds in the same region
-      url: "https://learn.microsoft.com/en-us/azure/azure-vmware/connect-multiple-private-clouds-same-region"
-
-- description: Integrate LDAPS Identity with dual sources for enhanced NSX and vCenter security
+      url: "https://learn.microsoft.com/ja-jp/azure/azure-vmware/connect-multiple-private-clouds-same-region"
+- description: LDAPS ID をデュアル ソースと統合して、NSX および vCenter のセキュリティを強化します
   aprlGuid: c2794660-ffd7-4da3-96ba-5d546b70b1c6
   recommendationTypeId: null
   recommendationControl: Security
   recommendationImpact: High
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    Ensure two external identity sources are configured for NSX and vCenter Server. The VMware vCenter Server and NSX Manager use these for authentication with external identities.
+  longDescription: |-
+    NSX と vCenter Server 用に 2 つの外部 ID ソースが構成されていることを確認します。 VMware vCenter Server と NSX Manager は、外部 ID による認証にこれらを使用します。
   potentialBenefits: Continuous login access during maintenances
   pgVerified: true
   publishedToLearn: false
@@ -34,19 +33,18 @@
   tags: null
   learnMoreLink:
     - name: Set an external identity source for vCenter
-      url: "https://learn.microsoft.com/en-us/azure/azure-vmware/configure-identity-source-vcenter"
+      url: "https://learn.microsoft.com/ja-jp/azure/azure-vmware/configure-identity-source-vcenter"
     - name: Set an external identity for NSX-T
-      url: "https://learn.microsoft.com/en-us/azure/azure-vmware/configure-external-identity-source-nsx-t"
-
-- description: Use HCX Network Extension High Availability
+      url: "https://learn.microsoft.com/ja-jp/azure/azure-vmware/configure-external-identity-source-nsx-t"
+- description: HCX ネットワーク拡張の高可用性を使用する
   aprlGuid: bce16eee-0933-4baa-ab4d-8d1bb5653fc2
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    Enable Network Extension High Availability for appliance failure tolerance in HCX service. It pairs selected appliances for Active Standby configuration, ensuring high availability and quick recovery, keeping configurations in-service despite failures.
+  longDescription: |-
+    HCX サービスでアプライアンスの障害耐性のためにネットワーク拡張の高可用性を有効にします。選択したアプライアンスをアクティブ スタンバイ構成にペアリングし、高可用性と迅速な復旧を確保し、障害があっても構成を稼働状態に保ちます。
   potentialBenefits: Improves HCX service continuity
   pgVerified: true
   publishedToLearn: false
@@ -55,19 +53,18 @@
   tags: null
   learnMoreLink:
     - name: HCX Network extension high availability
-      url: "https://learn.microsoft.com/en-us/azure/azure-vmware/configure-hcx-network-extension-high-availability"
+      url: "https://learn.microsoft.com/ja-jp/azure/azure-vmware/configure-hcx-network-extension-high-availability"
     - name: Understanding Network Extension High Availability
       url: "https://docs.vmware.com/en/VMware-HCX/4.8/hcx-user-guide/GUID-E1353511-697A-44B0-82A0-852DB55F97D7.html"
-
-- description: Verify Management Networks are not extended with HCX Network Extension
+- description: 管理ネットワークが HCX ネットワーク拡張機能で拡張されていないことを確認する
   aprlGuid: 6be9a543-cf82-4926-82ea-7e1f1ffaad80
   recommendationTypeId: null
   recommendationControl: Other Best Practices
   recommendationImpact: High
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    Do not extend the network used by the HCX Management devices to ensure the network's security and stability.
+  longDescription: |-
+    ネットワークのセキュリティと安定性を確保するために、HCX 管理デバイスが使用するネットワークを拡張しないでください。
   potentialBenefits: Enhanced network safety and performance
   pgVerified: true
   publishedToLearn: false
@@ -77,16 +74,15 @@
   learnMoreLink:
     - name: Requirements for Network Extension
       url: "https://docs.vmware.com/en/VMware-HCX/4.8/hcx-user-guide/GUID-0C746416-850E-46F7-85DD-4D4326A23785.html"
-
-- description: Verify vSAN FTT configuration aligns with the cluster size
+- description: vSAN FTT 構成がクラスター サイズと一致していることを確認する
   aprlGuid: 0943aa90-e3db-4c61-aef1-782b6a6a3881
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    The Azure VMware Solution's service SLA is influenced by vSAN storage policies, which change based on cluster size. For clusters over 6 hosts, an FTT-2 policy (RAID-1 or RAID-6) is advised. FTT refers to the Fault Tolerance feature.
+  longDescription: |-
+    Azure VMware Solution のサービス SLA は、クラスターのサイズに基づいて変化する vSAN ストレージ ポリシーの影響を受けます。 6 台のホストを超えるクラスターの場合は、FTT-2 ポリシー (RAID-1 または RAID-6) をお勧めします。 FTT はフォールト トレランス機能を指します。
   potentialBenefits: Enhanced cluster reliability
   pgVerified: true
   publishedToLearn: false
@@ -95,19 +91,18 @@
   tags: null
   learnMoreLink:
     - name: Use fault domains
-      url: "https://learn.microsoft.com/en-us/azure/well-architected/azure-vmware/application-platform#use-fault-domains"
+      url: "https://learn.microsoft.com/ja-jp/azure/well-architected/azure-vmware/application-platform#use-fault-domains"
     - name: Configure storage policy
-      url: "https://learn.microsoft.com/en-us/azure/azure-vmware/configure-storage-policy"
-
-- description: Align ExpressRoute configuration with best practices for circuit resilience
+      url: "https://learn.microsoft.com/ja-jp/azure/azure-vmware/configure-storage-policy"
+- description: ExpressRoute 構成を回線の回復力のベスト プラクティスに合わせて調整する
   aprlGuid: 6f573d60-be93-4f18-8016-42e923e3c05e
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    Microsoft suggests using two or more ExpressRoute circuits at distinct peering locations for critical workloads. Connect these circuits and your Azure VMware Solutions private clouds using Global Reach.
+  longDescription: |-
+    Microsoft は、重要なワークロードに対して、別個のピアリングの場所で 2 つ以上の ExpressRoute 回線を使用することを推奨しています。 Global Reach を使用して、これらの回線と Azure VMware Solutions プライベート クラウドを接続します。
   potentialBenefits: Enhanced circuit resilience for Azure VMware
   pgVerified: true
   publishedToLearn: false
@@ -118,17 +113,16 @@
     - name: APRL guidance for ExpressRoute circuits
       url: "https://azure.github.io/Azure-Proactive-Resiliency-Library/services/networking/expressroute-circuits"
     - name: Create a new ExpressRoute circuit
-      url: "https://learn.microsoft.com/azure/expressroute/expressroute-howto-circuit-portal-resource-manager?pivots=expressroute-preview#create-a-new-expressroute-circuit-preview"
-
-- description: Deploy two or more circuits in different peering locations when using stretched clusters
+      url: "https://learn.microsoft.com/ja-jp/azure/expressroute/expressroute-howto-circuit-portal-resource-manager?pivots=expressroute-preview#create-a-new-expressroute-circuit-preview"
+- description: ストレッチ クラスターを使用する場合は、異なるピアリングの場所に 2 つ以上の回線を展開します。
   aprlGuid: 91c84596-1c41-48fe-8d5e-3f817e6a273b
   recommendationTypeId: null
   recommendationControl: High Availability
   recommendationImpact: High
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    Azure VMware Solution vSAN stretched clusters cover 2 Availability Zones plus a third for witness. Use ExpressRoute for added resilience by deploying two circuits in different locations. With Global Reach, create a mesh topology by connecting on-premises circuits to Azure's managed circuits.
+  longDescription: |-
+    Azure VMware Solution vSAN ストレッチ クラスターは、2 つのアベイラビリティ ゾーンと監視用の 3 つ目のアベイラビリティ ゾーンをカバーします。 ExpressRoute を使用して、異なる場所に 2 つの回線をデプロイすることで復元力を強化します。 Global Reach を使用すると、オンプレミス回線を Azure のマネージド回線に接続してメッシュ トポロジを作成します。
   potentialBenefits: Enhanced resilience and connectivity
   pgVerified: true
   publishedToLearn: false
@@ -137,17 +131,16 @@
   tags: null
   learnMoreLink:
     - name: Deploy vSAN streched cluster
-      url: "https://learn.microsoft.com/en-us/azure/azure-vmware/deploy-vsan-stretched-clusters#deploy-a-stretched-cluster-private-cloud"
-
-- description: Deploy dual Azure VMware Solution clouds in different regions for disaster recovery
+      url: "https://learn.microsoft.com/ja-jp/azure/azure-vmware/deploy-vsan-stretched-clusters#deploy-a-stretched-cluster-private-cloud"
+- description: ディザスター リカバリーのために、異なるリージョンにデュアル Azure VMware Solution クラウドをデプロイする
   aprlGuid: bdac462a-2eda-4a67-887d-46d58f141afe
   recommendationTypeId: null
   recommendationControl: Disaster Recovery
   recommendationImpact: High
   recommendationResourceType: n/a
   recommendationMetadataState: Active
-  longDescription: |
-    Two Azure VMware Solution private clouds can be deployed in different regions for business continuity, implementing a mesh network topology based on ExpressRoute Gateway Connections and Global Reach Connections.
+  longDescription: |-
+    ビジネス継続性を確保するために 2 つの Azure VMware Solution プライベート クラウドを異なるリージョンにデプロイし、ExpressRoute ゲートウェイ接続とグローバル リーチ接続に基づくメッシュ ネットワーク トポロジを実装できます。
   potentialBenefits: Enhanced disaster recovery
   pgVerified: true
   publishedToLearn: false
@@ -156,6 +149,6 @@
   tags: null
   learnMoreLink:
     - name: Private Clouds in two regions
-      url: "https://learn.microsoft.com/en-us/azure/azure-vmware/move-azure-vmware-solution-across-regions"
+      url: "https://learn.microsoft.com/ja-jp/azure/azure-vmware/move-azure-vmware-solution-across-regions"
     - name: Dual Region Network Topology
-      url: "https://learn.microsoft.com/en-us/azure/cloud-adoption-framework/scenarios/azure-vmware/eslz-dual-region-network-topology"
+      url: "https://learn.microsoft.com/ja-jp/azure/cloud-adoption-framework/scenarios/azure-vmware/eslz-dual-region-network-topology"
