--- a/azure-waf/deploy/recommendations.yaml
+++ b/azure-waf/deploy/recommendations.yaml
@@ -1,19 +1,19 @@
-﻿- description: Avoid manual configuration to enforce consistency with Infrastructure as code
+- description: コードとしてのインフラストラクチャとの一貫性を確保するために手動構成を回避する
   aprlGuid: 6bf9e5d5-fe57-c647-8daa-4903770e1302
   recommendationTypeId: null
   recommendationControl: Automation
   recommendationImpact: Medium
   recommendationResourceType: WellArchitected/Deploy
   recommendationMetadataState: Active
-  longDescription: |
-    Infrastructure as code (IaC) uses DevOps methodology and versioning with a descriptive model to define and deploy infrastructure, such as networks, virtual machines, load balancers, and connection topologies. Just as the same source code always generates the same binary, an IaC model generates the same environment every time it deploys.
+  longDescription: |-
+    コードとしてのインフラストラクチャ (IaC) は、DevOps 手法と記述モデルによるバージョン管理を使用して、ネットワーク、仮想マシン、ロード バランサー、接続トポロジなどのインフラストラクチャを定義およびデプロイします。同じソース コードから常に同じバイナリが生成されるのと同じように、IaC モデルはデプロイするたびに同じ環境を生成します。
 
-    IaC is a key DevOps practice and a component of continuous delivery. With IaC, DevOps teams can work together with a unified set of practices and tools to deliver applications and their supporting infrastructure rapidly and reliably at scale.
+    IaC は重要な DevOps プラクティスであり、継続的デリバリーのコンポーネントです。 IaC を使用すると、DevOps チームは統一されたプラクティスとツールのセットを使用して連携して、アプリケーションとそのサポート インフラストラクチャを迅速かつ確実に大規模に提供できます。
 
-    Key Points:
-    - Avoid manual configuration to enforce consistency
-    - Deliver stable test environments rapidly at scale
-    - Use declarative definition files
+    キーポイント：
+    - 一貫性を確保するために手動構成を避ける
+    - 安定したテスト環境を大規模かつ迅速に提供
+    - 宣言型定義ファイルを使用する
   potentialBenefits: Ensures consistent, scalable deployments
   pgVerified: true
   publishedToLearn: false
@@ -23,20 +23,19 @@
   learnMoreLink:
     - name: Avoid manual configuration to enforce consistency
       url: "https://learn.microsoft.com/devops/deliver/what-is-infrastructure-as-code#avoid-manual-configuration-to-enforce-consistency"
-
-- description: Validated all changes in development environments before applying them to production
+- description: 開発環境でのすべての変更を実稼働環境に適用する前に検証しました。
   aprlGuid: e42e646c-7d67-dd4b-96dc-16a3439fa030
   recommendationTypeId: null
   recommendationControl: Automation
   recommendationImpact: Medium
   recommendationResourceType: WellArchitected/Deploy
   recommendationMetadataState: Active
-  longDescription: |
-    Continuously delivering value has become a mandatory requirement for organizations. To deliver value to your end users, you must release continually and without errors.
+  longDescription: |-
+    価値を継続的に提供することは、組織にとって必須の要件となっています。エンドユーザーに価値を提供するには、エラーなく継続的にリリースする必要があります。
 
-    Continuous delivery (CD) is the process of automating build, test, configuration, and deployment from a build to a production environment.
+    継続的デリバリー (CD) は、ビルド、テスト、構成、およびビルドから実稼働環境へのデプロイメントを自動化するプロセスです。
 
-    A release pipeline can create multiple testing or staging environments to automate infrastructure creation and deploy new builds. Successive environments support progressively longer-running integration, load, and user acceptance testing activities.
+    リリース パイプラインでは、複数のテスト環境またはステージング環境を作成して、インフラストラクチャの作成を自動化し、新しいビルドをデプロイできます。後続の環境では、統合、負荷、およびユーザー受け入れテストの長期実行アクティビティが徐々にサポートされます。
   potentialBenefits: Ensures error-free releases
   pgVerified: true
   publishedToLearn: false
