--- a/config/test/hugo.toml
+++ b/config/test/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://azure.github.io/Azure-Proactive-Resiliency-Library-v2"
+baseURL = "https://yahanda.github.io/Azure-Proactive-Resiliency-Library-v2"
 title = "Azure Proactive Resiliency Library v2"
 theme = "hugo-geekdoc"
 themesDir = "docs/themes"
@@ -128,7 +128,7 @@ enableRobotsTXT = true
 
   # (Optional, default none) Set source repository location. Used for 'Edit page' links.
   # You can also specify this parameter per page in front matter.
-  geekdocRepo = "https://github.com/Azure/Azure-Proactive-Resiliency-Library-v2"
+  geekdocRepo = "https://github.com/yahanda/Azure-Proactive-Resiliency-Library-v2"
 
   # (Optional, default none) Enable 'Edit page' links. Requires 'geekdocRepo' param
   # and the path must point to the parent directory of the 'content' folder.
